# ergot-esp-now-demo

esp-now-bridge/: Cargo.toml  build.rs
esp-now-bridge/.cargo/: config.toml
esp-now-device/: Cargo.toml
esp-now-device/.cargo/: config.toml
host/: Cargo.toml
host/src/: main.rs
