[package]
edition      = "2024"
name         = "esp-now-bridge"
rust-version = "1.88"
version      = "0.1.0"

[[bin]]
name = "esp-now-bridge"
path = "./src/bin/main.rs"

[dependencies]
esp-hal = { git = "https://github.com/esp-rs/esp-hal", branch = "main", features = ["esp32s3", "log-04", "unstable"] }
esp-rtos = { git = "https://github.com/esp-rs/esp-hal", branch = "main", features = [
  "embassy",
  "esp-alloc",
  "esp-radio",
  "esp32s3",
  "log-04",
] }
esp-bootloader-esp-idf = { git = "https://github.com/esp-rs/esp-hal", branch = "main", features = ["esp32s3", "log-04"] }
esp-alloc              = { git = "https://github.com/esp-rs/esp-hal", branch = "main" }
esp-println            = { git = "https://github.com/esp-rs/esp-hal", branch = "main", features = ["esp32s3", "log-04"] }
esp-radio = { git = "https://github.com/esp-rs/esp-hal", branch = "main", features = [
  "esp-alloc",
  "esp32s3",
  "log-04",
  "unstable",
  "esp-now",
] }
log                    = "0.4"
embassy-executor       = { version = "0.9.1", features = ["log"] }
embassy-time           = { version = "0.5.0", features = ["log"] }
embassy-futures        = "0.1.2"
embassy-usb            = { version = "0.6", default-features = false }
critical-section = "1.2.0"
static_cell      = "2.1.1"
bbqueue          = "0.7"
mutex            = "1.0.2"
serde            = { version = "1", default-features = false, features = ["derive"] }
ergot = { git = "https://github.com/okhsunrog/ergot", branch = "bus-address-claim", default-features = false, features = [
  "nostd-seed-router",
  "embassy-usb-v0_6",
  "embassy-time",
  "disable-cache-padding",
  "log-internal",
] }

[profile.dev]
opt-level = "s"

[profile.dev.package.esp-radio]
opt-level = 3

[profile.release]
codegen-units = 1
debug         = 2
lto           = 'fat'
opt-level     = 's'
